--- a/www/style.css
+++ b/www/style.css
@@ -6,7 +6,8 @@
 
 body { padding-top: 20px; padding-bottom: 40px; font-family: Arial, Georgia, Times; font-size: 16px; }
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { font-family: 'Nixie One', Georgia, Times; font-weight: 700;}
+h4 {font-weight: bolder}
+/*h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { font-family: 'Nixie One', Georgia, Times; font-weight: bolder;}*/
 
 blockquote p { font-size: 16px; line-height: 1.6em; }
 
@@ -26,41 +27,10 @@ img.avatar { margin-bottom: 30px; }
 		
 /* Custom container */
 .container > hr { margin: 30px 0; }
-.container > hr.footer {margin-bottom: 15px; }
+.container > hr.footer {margin-bottom: 20px; }
 
 /* E-Mail */
 .obfuscate { unicode-bidi: bidi-override; direction: rtl; }
-
-/* Jumbotron */     
-.jumbotron { margin: 80px 0; }
-.jumbotron h1 { font-size: 72px; line-height: 1; }
-.jumbotron .btn { font-size: 21px; padding: 14px 24px; }
-.marketing p { line-height: 25px; }
-.marketing p.lead { line-height: 30px; }
-
-/* Swatches */
-.swatch-log h2.date { margin-bottom: 30px; }
-.swatch-log { margin: 30px auto 70px; height: 140px; }
-ul.swatch { list-style: none; margin: 0 auto; padding: 0; height: 50px; }
-ul.swatch li { text-transform: uppercase; display: inline; float: left; height: 80px; width: 75px; text-indent: -9999px; font-size: 14px; text-align: center; font-family: 'Montserrat', Helvetica, sans-serif; background-image: url(/img/glass.png); background-repeat: repeat-x; background-position: 0 50%;}
-ul.swatch li:hover { height: 75px; width: 75px; vertical-align: middle; text-indent: 0; }
-/* 
-ul.swatch li:last-child { webkit-border-top-right-radius: 9px; -webkit-border-bottom-right-radius: 9px; -moz-border-radius-topright: 9px; -moz-border-radius-bottomright: 9px; border-top-right-radius: 9px; border-bottom-right-radius: 9px; }
-ul.swatch li:first-child { webkit-border-top-left-radius: 9px; -webkit-border-bottom-left-radius: 9px; -moz-border-radius-topleft: 9px; -moz-border-radius-bottomleft: 9px; border-top-left-radius: 9px; border-bottom-left-radius: 9px; }
-*/
-.swatch-log p { font-size: 14px; clear: left; margin-top: 10px; font-family: 'Montserrat', Helvetica, sans-serif; text-transform: uppercase; }
-.clear { clear: both; height: 20px; }
-
-/* CV */
-.cv {line-height: 23px; width: 90%; margin: 0 auto;}
-.cv li { line-height: 23px; }
-.cv h2 { font-size: 26.5px; }
-.cv h1 { font-size: 32.5px; }
-
-.download, .about, .cv, .error, .swatches { margin-bottom: 30px; }
-
-/* Download */
-iframe {font-family: 'Merriweather', Georgia, Times; font-size: 16px;}
 
 /* About */
 .about ul.list-unstyled li { line-height: 30px; text-indent: -30px; margin-left: 30px;}
